# pyxrk

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  pyxrk.pyi  requirements-dev.txt  requirements-lint.txt  requirements.txt  test.py
.github/workflows/: CI.yml  lint.yml
pyxrk/: __init__.py  pyxrk_raw.pyi  run.py  session.py  xrk.py
src/: channel.rs  lap.rs  lib.rs  run.rs  utils.rs
test/: test_raw_run.py  test_run.py
