[package]
name = "python-xrk"
version = "0.1.0"
authors = ["Joe Portela <jportela14@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_xrk"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
pyo3 = { version = "0.18.3", features = ["chrono"]}
# The current version utilizes the AiM library from 2020-01-24
xdrk = { git = "https://github.com/bmc-labs/xdrk" }
