[project]
name = "python-xrk"
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
line-length = 88
target-version = ["py37"]
include = ".pyi?$"

[tool.ruff]
line-length = 88
target-version = "py37"

ignore = [
    "E501", # line too long
    "F601", # Dictionary key literal ... repeated
]

[tool.mypy]
python_version = "3.7"
